--- a/public/styles.css
+++ b/public/styles.css
@@ -7,10 +7,10 @@ body {
 
 .userInput {
     margin-top: 20vh;
-    border: solid white 2px;
+    border: solid rgb(55, 53, 53) 2px;
     border-radius: 10px;
 
-    padding: 2vh 1vw;
+    padding: 2vh 4vw;
     overflow: hidden;
     border-top: none;
     width: fit-content;
@@ -18,4 +18,23 @@ body {
 
 button {
     font-size: 10vw;
+}
+
+/* mobile query for iphone 14 pro max */
+@media only screen 
+    and (max-width: 391px) 
+    and (max-height: 845px) 
+    /* and (-webkit-device-pixel-ratio: 3)  */
+{
+    body {
+        background-color: red;
+    }
+
+    .userInput {
+        margin-top: 30vh;
+        border: solid rgb(55, 53, 53) 10px;
+        border-radius: 10px;
+    
+        padding: 2vh 9vw;
+    }
 }
