--- a/public/styles.css
+++ b/public/styles.css
@@ -6,18 +6,28 @@ body {
 }
 
 .userInput {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* align-items: center; */
+
     margin-top: 20vh;
     border: solid rgb(55, 53, 53) 2px;
     border-radius: 10px;
+    /* max-width: 20%; */
 
     padding: 2vh 4vw;
     overflow: hidden;
     border-top: none;
-    width: fit-content;
+    
 }
 
 button {
+    display: block;
+    text-align: center;
     font-size: 10vw;
+    min-width: 100%;
+    margin-bottom: 1vh;
 }
 
 /* mobile query for iphone 14 pro max */
