--- a/public/styles.css
+++ b/public/styles.css
@@ -1,17 +1,21 @@
 body {
     background-color: black;
+    flex-wrap: wrap;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.appContent {
+    margin-top: 20vh;
+}
 .userInput {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     /* align-items: center; */
 
-    margin-top: 20vh;
+    margin-top: 2vh;
     border: solid rgb(55, 53, 53) 2px;
     border-radius: 10px;
     /* max-width: 20%; */
